# envoy-osproxy

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  README.md  book.toml  clippy.toml  rust-toolchain.toml
.claude/agents/: quality-reviewer.md
.githooks/: commit-msg
.github/workflows/: ci.yml  docs.yml  release.yml
crates/evoxy-abi/: Cargo.toml  README.md
crates/evoxy-abi/benches/: parse.rs
crates/evoxy-abi/src/: lib.rs  trace.rs  xfcc.rs
crates/evoxy-adapter/: Cargo.toml  README.md
crates/evoxy-adapter/benches/: adapt.rs
crates/evoxy-adapter/src/: classify.rs  lib.rs
crates/evoxy-bench/: Cargo.toml  README.md
crates/evoxy-bench/src/: lib.rs
crates/evoxy-bridge/: Cargo.toml  README.md
crates/evoxy-bridge/src/: lib.rs
crates/evoxy-extproc/: Cargo.toml  README.md
crates/evoxy-extproc/src/: actions.rs  asyncwrite.rs  convert.rs  directives.rs  extproc_tests.rs  lib.rs  metrics.rs  service.rs  service_tests.rs
crates/evoxy-extproc/tests/: e2e.rs  e2e_module.rs  mirror.rs  mtls.rs  perf.rs  perf_module.rs  scale.rs
crates/evoxy-filter/: Cargo.toml  README.md
crates/evoxy-filter/benches/: brain.rs
crates/evoxy-filter/src/: asyncwrite.rs  asyncwrite_tests.rs  filter_tests.rs  lib.rs  observe.rs  observe_tests.rs  reference.rs  reference_tests.rs
crates/evoxy-module/: Cargo.toml  README.md
crates/evoxy-module-sdk/: Cargo.toml  README.md
crates/evoxy-module-sdk/src/: lib.rs  sdk.rs
crates/evoxy-module/docker/: Dockerfile
crates/evoxy-module/src/: lib.rs  sdk.rs
crates/evoxy-route/: Cargo.toml  README.md
crates/evoxy-route/benches/: route.rs
crates/evoxy-route/src/: bulk.rs  demux.rs  encode.rs  lib.rs  read.rs  response.rs  route_tests.rs  transform.rs
docs/: 00-technical-analysis.md  01-architecture.md  06-wiring-example.md  08-engineering-standards.md  09-testing-and-quality.md  11-roadmap.md  12-backend-comparison.md  SUMMARY.md  introduction.md
docs/decisions/: 001-extension-mechanism.md  002-transform-then-forward.md  003-spi-packaging.md  004-abi-isolation.md  005-async-fanout-via-mirror.md  006-fips-boundary.md  README.md
docs/guide/: 01-architecture.md  02-tenancy.md  02-using.md  03-backends.md  03-build-extproc.md  04-build-module.md  05-backends.md  06-benchmarks.md  07-observability.md  08-config-only.md  09-capture-and-fanout.md  README.md
docs/specs/: adapter-contract.md  route-contract.md
examples/: README.md
examples/async-module/: Cargo.toml
examples/async-module/src/: lib.rs
examples/capture-bridge/: Cargo.toml
examples/capture-bridge/src/: main.rs
examples/custom-module/: Cargo.toml
examples/custom-module/src/: lib.rs
examples/custom-tenancy/: Cargo.toml
examples/custom-tenancy/src/: lib.rs
examples/envoy/: capture-fanout.yaml  dynamic-forward-proxy-tls.yaml  dynamic-forward-proxy.yaml  dynamic-module-multicluster.yaml  dynamic-module.yaml  extproc.yaml
site/: astro.config.mjs  package-lock.json  package.json
site/scripts/: sync-docs.mjs
xtask/: Cargo.toml
xtask/src/: main.rs
