[workspace]
resolver = "2"
members = [
    "crates/evoxy-abi",
    "crates/evoxy-adapter",
    "xtask",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
authors = ["Huy Nguyen"]
repository = "https://github.com/huyz0/envoy-osproxy"

[workspace.dependencies]
# The osproxy engine is REUSED, not reimplemented (docs/00 §2). We depend on its
# I/O-free brain crates by path — `-core` (only `thiserror`) and `-spi`
# (`-core` + `serde_json`) — so an Envoy filter can build the exact same
# `RequestCtx` the standalone proxy builds. Heavier engine crates are pulled in
# per milestone (M1+), never the transport/server crates (Envoy replaces those).
osproxy-core = { path = "../opensearch-proxy/crates/osproxy-core" }
osproxy-spi = { path = "../opensearch-proxy/crates/osproxy-spi" }

# Internal crates.
evoxy-abi = { path = "crates/evoxy-abi" }
evoxy-adapter = { path = "crates/evoxy-adapter" }

# Third-party.
thiserror = "2"

# Lints applied to every crate that opts in via `[lints] workspace = true`.
# Mirrors osproxy (docs/08): library code is panic-free (INV-5) and the request
# path never `unwrap`s — doubly load-bearing here because a dynamic-module panic
# crashes the Envoy worker (docs/00 §3.2). xtask does NOT opt in.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
too_many_lines = "warn"
too_many_arguments = "warn"
cognitive_complexity = "warn"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
# NOTE: the dynamic-module cdylib overrides this to `panic = "unwind"` in its own
# manifest — a panic must not unwind across the C ABI into Envoy (docs/00 §3.2).
panic = "abort"
