[workspace]
resolver = "2"
members = [
    "crates/evoxy-abi",
    "crates/evoxy-adapter",
    "crates/evoxy-route",
    "crates/evoxy-filter",
    "crates/evoxy-extproc",
    "crates/evoxy-bridge",
    "crates/evoxy-bench",
    "examples/custom-tenancy",
    "examples/capture-bridge",
    "xtask",
]

# The Envoy-ABI cdylib is deliberately NOT a workspace member (ADR-004): it links
# the Envoy dynamic-modules SDK via `bindgen`, which needs `libclang` + Envoy
# headers, so the gate, fmt, and the arch check never touch it. Build it on its
# own with `cargo build` from its directory, on a host with those prerequisites —
# exactly like osproxy's excluded `osproxy-kafka-rdkafka`.
exclude = [
    # The reusable SDK glue (links the Envoy SDK) and the reference cdylib over it.
    "crates/evoxy-module-sdk",
    "crates/evoxy-module",
    # A custom-tenancy module cdylib built on the same glue — same libclang need.
    "examples/custom-module",
    # The reference module with async write mode wired via register_async!.
    "examples/async-module",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
authors = ["Huy Nguyen"]
repository = "https://github.com/huyz0/envoy-osproxy"

[workspace.dependencies]
# The osproxy engine is REUSED, not reimplemented (docs/00 §2). We depend on its
# I/O-free brain crates from crates.io (no local path / no sibling checkout) —
# `-core` (only `thiserror`) and `-spi` (`-core` + `serde_json`) — so an Envoy
# filter can build the exact same `RequestCtx` the standalone proxy builds.
# Pinned exactly (`=`) so a build is reproducible and an engine bump is deliberate.
osproxy-core = "=1.0.2"
osproxy-spi = "=1.0.2"
osproxy-tenancy = "=1.0.2"
osproxy-rewrite = "=1.0.2"
# The Kafka producer seam (Producer / ProduceError / InMemoryProducer) reused by
# the fan-out bridge (ADR-005), so osproxy's real `KrafkaProducer` plugs straight
# in. The seam crate is light (no broker client, no crypto).
osproxy-kafka = "=1.0.2"

# Internal crates. Each carries a `version` alongside `path` so `cargo publish`
# rewrites the path dep to a real crates.io version (a version-less dep is rejected
# at publish). Keep these in lockstep with `workspace.package.version` above.
evoxy-abi = { path = "crates/evoxy-abi", version = "0.1.0" }
evoxy-adapter = { path = "crates/evoxy-adapter", version = "0.1.0" }
evoxy-route = { path = "crates/evoxy-route", version = "0.1.0" }
evoxy-filter = { path = "crates/evoxy-filter", version = "0.1.0" }
evoxy-bridge = { path = "crates/evoxy-bridge", version = "0.1.0" }
# The NFR-P bench harness (LatencySummary / NfrProfile / judge / ScalabilityCurve)
# — dev-only, owned here (osproxy's equivalent is unpublished), so the perf/scale
# harnesses have no unpublished or path dependency.
evoxy-bench = { path = "crates/evoxy-bench" }

# Third-party.
thiserror = "2"
serde_json = "1"
tokio = { version = "1", default-features = false }

# Lints applied to every crate that opts in via `[lints] workspace = true`.
# Mirrors osproxy (docs/08): library code is panic-free (INV-5) and the request
# path never `unwrap`s — doubly load-bearing here because a dynamic-module panic
# crashes the Envoy worker (docs/00 §3.2). xtask does NOT opt in.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
too_many_lines = "warn"
too_many_arguments = "warn"
cognitive_complexity = "warn"
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"

[profile.release]
lto = "thin"
codegen-units = 1
# NOTE: the dynamic-module cdylib overrides this to `panic = "unwind"` in its own
# manifest — a panic must not unwind across the C ABI into Envoy (docs/00 §3.2).
panic = "abort"
