[package]
name = "evoxy-extproc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The ext_proc backend: an Envoy External Processing gRPC service over the same evoxy-filter brain (ADR-001). Pure Rust (tonic), no libclang."

[dependencies]
evoxy-abi.workspace = true
evoxy-filter.workspace = true
osproxy-tenancy.workspace = true
envoy-types = "0.7"
tonic = "0.14"
prost = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures-core = "0.3"

[dev-dependencies]
# The live end-to-end test (tests/e2e.rs, #[ignore]'d): real OpenSearch behind a
# stock Envoy whose ext_proc filter calls our in-process service. Needs Docker.
testcontainers = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde_json = "1"
# The mTLS live test (tests/mtls.rs) generates a CA + server + client cert at
# runtime, so no secrets are committed.
rcgen = "0.13"
# The NFR-P A/B bench (tests/perf.rs) reuses osproxy's pure bench crate for the
# proxy-vs-direct latency profile + verdict.
osproxy-bench.workspace = true

[lints]
workspace = true
