[package]
name = "evoxy-module"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"
license = "Apache-2.0"
publish = false
description = "The reference Envoy dynamic-module cdylib: one register! over evoxy-module-sdk, running the reference tenancy. Workspace-EXCLUDED (ADR-004) — links the Envoy SDK, needs libclang."

[lib]
# The `.so` Envoy loads via ENVOY_DYNAMIC_MODULES_SEARCH_PATH. `dynamic_module_config.name`
# in the Envoy config is `evoxy_module` → Envoy dlopen's `libevoxy_module.so`.
crate-type = ["cdylib"]

[dependencies]
# The reusable glue + macro. It carries the Envoy SDK (git) dependency; this crate
# just invokes `register!`, so building the cdylib pulls the SDK transitively.
evoxy-module-sdk = { path = "../evoxy-module-sdk" }

# NOTE: this crate is intentionally NOT a workspace member (see the root
# Cargo.toml `exclude`). A panic must not unwind across the C ABI into an Envoy
# worker (ADR-001/INV-3), so the release profile uses `panic = "abort"`.
[profile.release]
panic = "abort"
